<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ufone Employee Self Service</string>
    <string name="hello_world">Hello world old!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect">Incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="title_section1">Employee Profile</string>
    <string name="title_section2">Leave Balance</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="dashboard_welcome_message">Swipe right to view options or click the Drawer icon in the top-left corner</string>

    <!-- dummy data for profile page -->
    <string name="dummy_name">Sayyed Shozib Abbas\n(SIP Intern)</string>

    <!-- dashboard text -->
    <string name="empProfile">Employee Profile</string>
    <string name="leaveBalance">Leave Balance</string>
    <string name="providentFundBalance">Provident Fund Balance</string>
    <string name="medicalServiceRecord">Medical Service</string>
    <string name="askHR">Ask HR</string>
    <string name="askHRQuery">Create HR Query</string>

    <!-- Joining date labels -->
    <string name="empJoiningDate">Joining Date</string>
    <string name="empEmail">Email</string>
    <string name="empServiceNumber">Service #</string>
    <string name="empStatus">Status</string>
    <string name="empLineManager">Line Manager</string>
    <string name="empDepartment">Department</string>
    <string name="empSubDepartment">Sub-Department</string>
    <string name="empCNIC">CNIC</string>
    <string name="empDOB">Date of Birth</string>
    <string name="empTAddress">Present Address</string>
    <string name="empPAddress">Permanent Address</string>

    <!-- Leave Balance Screen -->
    <string name="lbDate">Session</string>

    <!-- Provident Fund Balance Screen -->
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="netFund">Net Fund</string>

    <!-- Medical Service Screen -->
    <string name="downloadHelp">\?</string>
    <string name="regionName">Region</string>
    <string name="cityName">City</string>
    <string name="hospName">Hospital</string>
    <string name="screenBtn">Get Details</string>

    <string name="mssSubmit">Check Now</string>
    <string name="mssReset">Reset</string>
    <string name="title_activity_ask_hr">AskHRActivity</string>
    <string name="ask_hr_button">View Comments</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="samplepara">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum lorem ante, placerat mattis turpis scelerisque ut. Aliquam erat volutpat. Vestibulum laoreet id quam vitae varius. Nam a ex maximus, tincidunt nibh vitae, sollicitudin odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut sit amet rutrum magna. Ut feugiat eleifend purus, eu dapibus ex molestie ac.</string>

</resources>
