<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.ufone.uess.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ufonelogo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/login_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loggingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Logging In"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/primary_text_color"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:typeface="normal" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:typeface="normal" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="16dp"
            android:background="@drawable/orange_button"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/material_dark_color"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
