<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ufone.uess.ProvidentFundBalanceActivity">

    <include
        layout="@layout/titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/p_f_b_Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="1"
        android:visibility="gone">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/netFund"
                android:textColor="@color/mainorange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p_f_b_ProvFund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:textColor="@color/mainorange"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="#eeeeee"
            android:padding="1dp">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:textColor="@color/mainorange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p_f_b_StartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:onClick="showHDateTo" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="#eeeeee"
            android:padding="1dp">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:textColor="@color/mainorange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/p_f_b_EndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:onClick="showHEmail" />

        </TableRow>

    </TableLayout>

</LinearLayout>
