<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ufone.uess.DashboardActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/mainorange"
        android:orientation="vertical"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:background="@drawable/shutdown"
            android:onClick="backPress" />

        <LinearLayout
            android:id="@+id/dashboard_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ufonelogo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="Employee Self Service"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button2"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/mainmenubutton"
                        android:drawableTop="@drawable/persona"
                        android:onClick="openEmployeeProfile"
                        android:padding="20dp"
                        android:text="@string/empProfile"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="#ddffffff" />

                    <Button
                        android:id="@+id/button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/mainmenubutton"
                        android:drawableTop="@drawable/leave"
                        android:onClick="openLeaveBalance"
                        android:padding="20dp"
                        android:text="@string/leaveBalance"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="#ddffffff" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button3"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/mainmenubutton"
                        android:drawableTop="@drawable/money"
                        android:onClick="openProvidentFundBalance"
                        android:padding="20dp"
                        android:text="Provident Fund Balance"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="#ddffffff" />

                    <Button
                        android:id="@+id/button4"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/mainmenubutton"
                        android:drawableTop="@drawable/medical"
                        android:onClick="openMedicalService"
                        android:padding="20dp"
                        android:text="@string/medicalServiceRecord"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="#ddffffff" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button6"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/dashboard_con"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:background="@drawable/mainmenubutton"
                        android:drawableTop="@drawable/assistant"
                        android:onClick="openAskHR"
                        android:padding="20dp"
                        android:text="@string/askHR"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="#ddffffff" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
